--- a/lib/gallows_web/templates/hangman/new_game.html.eex
+++ b/lib/gallows_web/templates/hangman/new_game.html.eex
@@ -1,2 +1,2 @@
 <h1><%= gettext "Welcome to %{name}!", name: "Hangman" %></h1>
-<button>New Game</button>
+<%= button("New Game", to: Routes.hangman_path(@conn, :create_game)) %>
