Add a form to make a guess

--- a/lib/gallows_web/templates/hangman/game_field.html.eex
+++ b/lib/gallows_web/templates/hangman/game_field.html.eex
@@ -7,3 +7,7 @@
   Word so far: <%= display_word(@tally.letters) %>
 </p>
 
+<%= form_for(@conn, Routes.hangman_path(@conn, :make_move), [as: :make_move, method: :put], fn f -> %>
+  <%= text_input(f, :guess) %>
+  <%= submit("Make move") %>
+<% end) %>
