Option to start a new game if current is over

--- a/lib/gallows_web/templates/hangman/game_field.html.eex
+++ b/lib/gallows_web/templates/hangman/game_field.html.eex
@@ -6,7 +6,11 @@
   Word so far: <%= display_word(@tally.letters) %>
 </p>
 
-<%= form_for(@conn, Routes.hangman_path(@conn, :make_move), [as: :make_move, method: :put], fn f -> %>
-  <%= text_input(f, :guess) %>
-  <%= submit("Make move") %>
-<% end) %>
+<%= if game_over?(@tally.state) do %>
+  <%= new_game_button(@conn) %>
+<% else %>
+  <%= form_for(@conn, Routes.hangman_path(@conn, :make_move), [as: :make_move, method: :put], fn f -> %>
+    <%= text_input(f, :guess) %>
+    <%= submit("Make move") %>
+  <% end) %>
+<% end %>
