--- a/lib/gallows_web/templates/hangman/game_field.html.eex
+++ b/lib/gallows_web/templates/hangman/game_field.html.eex
@@ -9,8 +9,8 @@
 <%= if game_over?(@tally.state) do %>
   <%= new_game_button(@conn) %>
 <% else %>
-  <%= form_for(@conn, Routes.hangman_path(@conn, :make_move), [as: :make_move, method: :put], fn f -> %>
-    <%= text_input(f, :guess) %>
+  <%= form_for(@conn, Routes.hangman_path(@conn, :make_move), [as: :make_move, method: :put], fn form -> %>
+    <%= text_input(form, :guess) %>
     <%= submit("Make move") %>
   <% end) %>
 <% end %>
