Add the hangman stick figure & separate the templates for the state

--- a/lib/gallows_web/templates/hangman/game_field.html.eex
+++ b/lib/gallows_web/templates/hangman/game_field.html.eex
@@ -1,16 +1,9 @@
 <%= game_state(@tally.state) %>
-<p>
-  Turns left: <%= @tally.turns_left %>
-</p>
-<p>
-  Word so far: <%= display_word(@tally.letters) %>
-</p>
-
-<%= if game_over?(@tally.state) do %>
-  <%= new_game_button(@conn) %>
-<% else %>
-  <%= form_for(@conn, Routes.hangman_path(@conn, :make_move), [as: :make_move, method: :put], fn form -> %>
-    <%= text_input(form, :guess) %>
-    <%= submit("Make move") %>
-  <% end) %>
-<% end %>
+<div class="row">
+  <div class="column column-30">
+    <%= render "_gallows.html", left: @tally.turns_left %>
+  </div>
+  <div class="column column-60 column-offset-10">
+    <%= render "_status.html", tally: @tally, conn: @conn %>
+  </div>
+</div>
